crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_auth_info_default.snap
---
source: crates/shipper-auth/src/lib.rs
expression: info
---
AuthInfo {
    token: None,
    source: None,
    detected: false,
}
