crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_error_malformed_credentials_file.snap
---
source: crates/shipper-auth/src/lib.rs
expression: msg
---
"TOML parse error at line 1, column 6\n  |\n1 | this is not valid toml [[[\n  |      ^\nkey with no value, expected `=`\n"
