crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_error_missing_credentials_file.snap
---
source: crates/shipper-auth/src/lib.rs
expression: err.to_string()
---
"credentials file not found"
