crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_error_token_not_found_for_registry.snap
---
source: crates/shipper-auth/src/lib.rs
expression: err.to_string()
---
"token not found for registry: nonexistent-registry"
