crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_list_configured_registries_mixed.snap
---
source: crates/shipper-auth/src/lib.rs
expression: registries
---
[
    "alpha",
    "beta",
    "crates-io",
]
