crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_resolve_token_custom_registry_from_credentials.snap
---
source: crates/shipper-auth/src/lib.rs
expression: auth
---
AuthInfo {
    token: Some(
        "priv-token-abc",
    ),
    source: CredentialsFile,
    detected: true,
}
