crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_resolve_token_from_credentials_file.snap
---
source: crates/shipper-auth/src/lib.rs
expression: auth
---
AuthInfo {
    token: Some(
        "file-secret-token",
    ),
    source: CredentialsFile,
    detected: true,
}
