crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_resolve_token_from_env_default.snap
---
source: crates/shipper-auth/src/lib.rs
expression: auth
---
AuthInfo {
    token: Some(
        "cio-secret-token-value",
    ),
    source: EnvDefault,
    detected: true,
}
