crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_resolve_token_from_env_registry.snap
---
source: crates/shipper-auth/src/lib.rs
expression: auth
---
AuthInfo {
    token: Some(
        "my-reg-token",
    ),
    source: EnvRegistry,
    detected: true,
}
