crates/shipper-auth/src/snapshots/shipper_auth__tests__snapshots__snapshot_resolve_token_none_found.snap
---
source: crates/shipper-auth/src/lib.rs
expression: auth
---
AuthInfo {
    token: None,
    source: None,
    detected: false,
}
